--- a/libraries.gradle
+++ b/libraries.gradle
@@ -6,16 +6,16 @@ subprojects {
     resolutionStrategy {
       // AGPL-compatible alternatives (mostly Apache v2)
       def replacements = [
-        'org.jboss.spec.javax.annotation:jboss-annotations-api_1.1_spec': 'org.apache.geronimo.specs:geronimo-annotation_1.1_spec:1.0.1',
-        'javax.activation:activation': 'org.apache.geronimo.specs:geronimo-activation_1.1_spec:1.1',
+        "org.jboss.spec.javax.annotation:jboss-annotations-api_1.1_spec": "org.apache.geronimo.specs:geronimo-annotation_1.1_spec:1.0.1",
+        "javax.activation:activation": "org.apache.geronimo.specs:geronimo-activation_1.1_spec:1.1",
         // Use an Apache-licensed clean-room reimplementation of JCIP Annotations.
         // The original JCIP Annotations are under Creative Commons Attribution License
         // which is not recommended for software, and incompatible with AGPL.
         // https://wiki.creativecommons.org/Frequently_Asked_Questions#Can_I_apply_a_Creative_Commons_license_to_software.3F
-        'net.jcip:jcip-annotations': 'com.github.stephenc.jcip:jcip-annotations:1.0-1',
+        "net.jcip:jcip-annotations": "com.github.stephenc.jcip:jcip-annotations:1.0-1",
       ]
       eachDependency { DependencyResolveDetails details ->
-        def key = details.requested.group + ':' + details.requested.name
+        def key = details.requested.group + ":" + details.requested.name
         def replacement = replacements[key]
         if (replacement) {
           details.useTarget(replacement)
@@ -25,23 +25,23 @@ subprojects {
   }
 }
 
-def guiceVersion = '4.1.0'
-def jacksonVersion = '2.9.1'
-def log4jVersion = '2.9.1'
-def resteasyVersion = '3.1.4.Final'
+def guiceVersion = "4.1.0"
+def jacksonVersion = "2.9.1"
+def log4jVersion = "2.9.1"
+def resteasyVersion = "3.1.4.Final"
 
 ext.libs = [
-  guava:               'com.google.guava:guava:23.0',
-  jsr305:              'com.google.code.findbugs:jsr305:3.0.1',
+  guava:               "com.google.guava:guava:23.0",
+  jsr305:              "com.google.code.findbugs:jsr305:3.0.1",
 
-  immutables:          'org.immutables:value:2.5.5',
-  immutables_annotations: 'org.immutables:value:2.5.5:annotations@jar',
+  immutables:          "org.immutables:value:2.5.5",
+  immutables_annotations: "org.immutables:value:2.5.5:annotations@jar",
 
-  forbiddenapis:       'de.thetaphi:forbiddenapis:2.3',
+  forbiddenapis:       "de.thetaphi:forbiddenapis:2.3",
 
-  bouncycastle:        'org.bouncycastle:bcprov-jdk15on:1.58',
+  bouncycastle:        "org.bouncycastle:bcprov-jdk15on:1.58",
 
-  jose4j:              'org.bitbucket.b_c:jose4j:0.6.1',
+  jose4j:              "org.bitbucket.b_c:jose4j:0.6.1",
 
   guice:               [
       "com.google.inject:guice:$guiceVersion",
@@ -49,38 +49,38 @@ ext.libs = [
     ],
 
   jongo:               [
-      'org.jongo:jongo:1.3.0',
-      'de.undercouch:bson4jackson:2.7.0',
-      'org.mongodb:mongo-java-driver:3.5.0',
+      "org.jongo:jongo:1.3.0",
+      "de.undercouch:bson4jackson:2.7.0",
+      "org.mongodb:mongo-java-driver:3.5.0",
     ],
 
   elasticsearch:       [
-      'org.elasticsearch:elasticsearch:1.4.4',
-      'io.searchbox:jest:1.0.3'
+      "org.elasticsearch:elasticsearch:1.4.4",
+      "io.searchbox:jest:1.0.3"
     ],
 
   resteasy_netty:      [
       "org.jboss.resteasy:resteasy-netty:$resteasyVersion",
-      'io.netty:netty:3.10.6.Final',
+      "io.netty:netty:3.10.6.Final",
     ],
 
   resteasy_client:     [
       "org.jboss.resteasy:resteasy-client:$resteasyVersion",
-      'net.ltgt.jaxrs:resteasy-client-okhttp3:1.1',
+      "net.ltgt.jaxrs:resteasy-client-okhttp3:1.1",
       "com.squareup.okhttp3:okhttp:3.9.0",
       "com.squareup.okhttp3:logging-interceptor:3.9.0"
     ],
 
-  resteasy_testing:   'net.ltgt.jaxrs:resteasy-testing:0.2',
+  resteasy_testing:   "net.ltgt.jaxrs:resteasy-testing:0.2",
 
-  jaxrs_webhook:      'net.ltgt.jaxrs:jaxrs-webhook:0.1',
+  jaxrs_webhook:      "net.ltgt.jaxrs:jaxrs-webhook:0.1",
 
-  closure_templates_standalone: dependencies.create('com.google.template:soy:2017-08-08') {
-      exclude group: 'com.google.gwt'
+  closure_templates_standalone: dependencies.create("com.google.template:soy:2017-08-08") {
+      exclude group: "com.google.gwt"
   },
   closure_templates:   [
-      dependencies.create('com.google.template:soy:2017-08-08') {
-        exclude group: 'com.google.gwt'
+      dependencies.create("com.google.template:soy:2017-08-08") {
+        exclude group: "com.google.gwt"
       },
       "com.google.inject.extensions:guice-assistedinject:$guiceVersion",
       "com.google.inject.extensions:guice-multibindings:$guiceVersion",
@@ -99,40 +99,40 @@ ext.libs = [
       "com.fasterxml.jackson.module:jackson-module-jaxb-annotations:$jacksonVersion",
     ],
 
-  jdeb:                'org.vafer:jdeb:1.5',
+  jdeb:                "org.vafer:jdeb:1.5",
 
-  jsSHA:               'org.webjars.bower:jsSHA:2.2.0',
+  jsSHA:               "org.webjars.bower:jsSHA:2.2.0",
 
-  icu4j:               'com.ibm.icu:icu4j:59.1',
+  icu4j:               "com.ibm.icu:icu4j:59.1",
 
-  galimatias:          'io.mola.galimatias:galimatias:0.2.1',
+  galimatias:          "io.mola.galimatias:galimatias:0.2.1",
 
-  mail:                'org.apache.geronimo.javamail:geronimo-javamail_1.4_mail:1.8.4',
+  mail:                "org.apache.geronimo.javamail:geronimo-javamail_1.4_mail:1.8.4",
 
-  slf4j:               'org.slf4j:slf4j-api:1.7.25',
+  slf4j:               "org.slf4j:slf4j-api:1.7.25",
 
   log4j2:              "org.apache.logging.log4j:log4j-api:$log4jVersion",
 
   log4j_runtime:       [
       "org.apache.logging.log4j:log4j-slf4j-impl:$log4jVersion",
-      'com.lmax:disruptor:3.3.6',
+      "com.lmax:disruptor:3.3.6",
     ],
 
-  args4j:              'args4j:args4j:2.33',
+  args4j:              "args4j:args4j:2.33",
 
-  config:              'com.typesafe:config:1.3.1',
+  config:              "com.typesafe:config:1.3.1",
 
-  junit:               'junit:junit:4.12',
+  junit:               "junit:junit:4.12",
 
-  mockito:             'org.mockito:mockito-core:2.10.0',
+  mockito:             "org.mockito:mockito-core:2.10.0",
 
   jukito:              [
-      'org.jukito:jukito:1.5',
+      "org.jukito:jukito:1.5",
       "com.google.inject.extensions:guice-assistedinject:$guiceVersion",
     ],
 
   assertj:             [
-      'org.assertj:assertj-core:3.8.0',
-      'org.assertj:assertj-guava:3.1.0',
+      "org.assertj:assertj-core:3.8.0",
+      "org.assertj:assertj-guava:3.1.0",
     ],
 ]
