--- a/oasis-dist/dist.gradle
+++ b/oasis-dist/dist.gradle
@@ -1,17 +1,19 @@
-apply plugin: 'base'
+plugins {
+  id("base")
+}
 
-description = ''
+description = ""
 
 ext.oasis = [
-  home:         '/usr/lib/oasis',
-  service:      'oasis',
-  desc:         'OASIS kernel',
-  user:         'oasis',
-  group:        'oasis',
+  home:         "/usr/lib/oasis",
+  service:      "oasis",
+  desc:         "OASIS kernel",
+  user:         "oasis",
+  group:        "oasis",
 ]
 // Turns 1.2.3-45-g789abcd into 1.2.3~45.g789abcd; but use 0.0.0 when versionlessOutputs==true.
-// Note: this is similar to the versions produced by git-buildpackage, except for the "gbp" marker replaced with git-describe's "g"
-ext.debianVersion = versionlessOutputs ? '0.0.0' : project.version.replaceAll('^([^-]+)-([^-]+)-([^-]+)$', '$1~$2.$3')
+// Note: this is similar to the versions produced by git-buildpackage, except for the "gbp" marker replaced with git-describe"s "g"
+ext.debianVersion = versionlessOutputs ? "0.0.0" : project.version.replaceAll("^([^-]+)-([^-]+)-([^-]+)\$", "\$1~\$2.\$3")
 
 configurations {
   distLib
@@ -19,59 +21,59 @@ configurations {
 }
 
 dependencies {
-  distLib project(path: ':oasis-webapp', configuration: 'runtime')
+  distLib(project(path: ":oasis-webapp", configuration: "runtime"))
 
-  jdeb libs.jdeb
+  jdeb(libs.jdeb)
 }
 
 task explodedDir(type: Sync) {
   inputs.properties(oasis)
 
-  destinationDir = new File(buildDir, 'tmp/debExploded')
+  destinationDir = new File(buildDir, "tmp/debExploded")
 
-  from('src/linux/') {
-    into 'linux/'
+  from("src/linux/") {
+    into("linux/")
   }
-  from('src/deb/etc/') {
-    into 'linux/deb/etc/'
+  from("src/deb/etc/") {
+    into("linux/deb/etc/")
     filter(org.apache.tools.ant.filters.ReplaceTokens, tokens: [
-      'oasis.home':     oasis.home,
-      'oasis.service':  oasis.service,
-      'oasis.desc':     oasis.desc,
-      'oasis.user':     oasis.user,
-      'oasis.group':    oasis.group,
+      "oasis.home":     oasis.home,
+      "oasis.service":  oasis.service,
+      "oasis.desc":     oasis.desc,
+      "oasis.user":     oasis.user,
+      "oasis.group":    oasis.group,
       ])
   }
-  from('src/etc/') {
-    into 'linux/etc/'
+  from("src/etc/") {
+    into("linux/etc/")
     filter(org.apache.tools.ant.filters.ReplaceTokens, tokens: [
-      'oasis.home':     oasis.home,
-      'oasis.service':  oasis.service,
-      'oasis.desc':     oasis.desc,
-      'oasis.user':     oasis.user,
-      'oasis.group':    oasis.group,
+      "oasis.home":     oasis.home,
+      "oasis.service":  oasis.service,
+      "oasis.desc":     oasis.desc,
+      "oasis.user":     oasis.user,
+      "oasis.group":    oasis.group,
       ])
   }
   from(configurations.distLib) {
-    into 'lib/'
+    into("lib/")
   }
 }
 
 task debControl(type: Sync) {
   inputs.properties(oasis)
-  inputs.property('debianVersion', debianVersion)
+  inputs.property("debianVersion", debianVersion)
 
-  destinationDir = new File(buildDir, 'tmp/debControl')
+  destinationDir = new File(buildDir, "tmp/debControl")
 
-  from('src/deb/control') {
+  from("src/deb/control") {
     filter(org.apache.tools.ant.filters.ReplaceTokens, tokens: [
-      'name':           oasis.service,
-      'version':        debianVersion,
-      'oasis.home':     oasis.home,
-      'oasis.service':  oasis.service,
-      'oasis.desc':     oasis.desc,
-      'oasis.user':     oasis.user,
-      'oasis.group':    oasis.group,
+      "name":           oasis.service,
+      "version":        debianVersion,
+      "oasis.home":     oasis.home,
+      "oasis.service":  oasis.service,
+      "oasis.desc":     oasis.desc,
+      "oasis.user":     oasis.user,
+      "oasis.group":    oasis.group,
     ])
   }
 }
@@ -83,38 +85,38 @@ task deb(dependsOn: [explodedDir, debControl]) {
 
   // Note: changesIn is mandatory for being able to use changesOut, but the file needs not exist.
   // So we arbitrarily picks CHANGES.txt as changesIn, and make sure it plays nicely with Gradle incremental builds.
-  inputs.files explodedDir.outputs, debControl.outputs, 'CHANGES.txt'
+  inputs.files(explodedDir.outputs, debControl.outputs, "CHANGES.txt")
   inputs.properties(oasis)
-  inputs.property('debianVersion', debianVersion)
-  inputs.files configurations.jdeb
-  outputs.files destfile, changesOut
+  inputs.property("debianVersion", debianVersion)
+  inputs.files(configurations.jdeb)
+  outputs.files(destfile, changesOut)
 
   doLast {
     ant.taskdef(name: "deb", classname: "org.vafer.jdeb.ant.DebAntTask", classpath: configurations.jdeb.asPath)
 
     def pathTemplatesDir = "$buildDir/tmp/pathTemplates"
-    // HACK: jDeb Ant task doesn't support data(type:'template') so we fake it with empty folders and data(type:'directory')
+    // HACK: jDeb Ant task doesn"t support data(type:"template") so we fake it with empty folders and data(type:"directory")
     delete(pathTemplatesDir)
     mkdir("$pathTemplatesDir/var/log/${oasis.service}")
 
-    ant.deb(destfile: destfile, control: debControl.destinationDir, changesIn: 'CHANGES.txt', changesOut: changesOut, verbose: true) {
-      tarfileset(dir: explodedDir.destinationDir, includes: 'lib/**', prefix: oasis.home, username: oasis.user, group: oasis.group)
-      tarfileset(dir: new File(explodedDir.destinationDir, 'linux/etc'), prefix: "etc/${oasis.service}", username: oasis.user, group: oasis.group)
-      data(type: 'directory', src: pathTemplatesDir) { // Hack for lack of data(type:'template')
-        mapper(type: 'perm', user: oasis.user, group: oasis.group)
+    ant.deb(destfile: destfile, control: debControl.destinationDir, changesIn: "CHANGES.txt", changesOut: changesOut, verbose: true) {
+      tarfileset(dir: explodedDir.destinationDir, includes: "lib/**", prefix: oasis.home, username: oasis.user, group: oasis.group)
+      tarfileset(dir: new File(explodedDir.destinationDir, "linux/etc"), prefix: "etc/${oasis.service}", username: oasis.user, group: oasis.group)
+      data(type: "directory", src: pathTemplatesDir) { // Hack for lack of data(type:"template")
+        mapper(type: "perm", user: oasis.user, group: oasis.group)
       }
-      data(type: 'file', src: new File(explodedDir.destinationDir, 'linux/daemon.sh'), dst: oasis.service) {
-        mapper(type: 'perm', prefix: oasis.home, filemode: '775')
+      data(type: "file", src: new File(explodedDir.destinationDir, "linux/daemon.sh"), dst: oasis.service) {
+        mapper(type: "perm", prefix: oasis.home, filemode: "775")
       }
-      data(type: 'file', src: new File(explodedDir.destinationDir, 'linux/deb/etc/init.d/service.sh'), dst: "etc/init.d/${oasis.service}") {
-        mapper(type: 'perm', filemode: '755')
+      data(type: "file", src: new File(explodedDir.destinationDir, "linux/deb/etc/init.d/service.sh"), dst: "etc/init.d/${oasis.service}") {
+        mapper(type: "perm", filemode: "755")
       }
-      data(type: 'file', src: new File(explodedDir.destinationDir, 'linux/deb/etc/default/service-config'), dst: "etc/default/${oasis.service}")
+      data(type: "file", src: new File(explodedDir.destinationDir, "linux/deb/etc/default/service-config"), dst: "etc/default/${oasis.service}")
     }
   }
 }
 assemble.dependsOn deb
 
 downloadLicenses {
-  dependencyConfiguration = 'distLib'
+  dependencyConfiguration = "distLib"
 }
