--- a/oasis-model/model.gradle
+++ b/oasis-model/model.gradle
@@ -1,16 +1,18 @@
-apply plugin: 'java'
+plugins {
+    id("java")
+}
 
 dependencies {
-    compile libs.jsr305
-    compile libs.jackson_annotations
-    compile libs.jackson_databind
-    compile libs.icu4j
-    compile libs.guava
+    compile(libs.jsr305)
+    compile(libs.jackson_annotations)
+    compile(libs.jackson_databind)
+    compile(libs.icu4j)
+    compile(libs.guava)
 
-    compileOnly         libs.immutables_annotations
-    testCompileOnly     libs.immutables_annotations
-    annotationProcessor libs.immutables
+    compileOnly(libs.immutables_annotations)
+    testCompileOnly(libs.immutables_annotations)
+    annotationProcessor(libs.immutables)
 
-    testCompile libs.junit
-    testCompile libs.assertj
+    testCompile(libs.junit)
+    testCompile(libs.assertj)
 }
