Use nebula.deb plugin to build the Debian package
Take that opportunity to fix permissions of the daemon.sh
(which ends up at /usr/lib/oasis/oasis), and properly declare
configuration files.

Change-Id: If53fbcb0f10a4e57f2c1f5d51acc3d4ca5fed5ea

--- a/build.gradle
+++ b/build.gradle
@@ -4,6 +4,7 @@ plugins {
   id("com.github.hierynomus.license") version "0.14.0"
 
   id("de.thetaphi.forbiddenapis") version "2.4.1" apply false
+  id("nebula.deb") version "4.8.0" apply false
 }
 apply {
   from("./libraries.gradle")
