Fix typo in dev.conf
Change-Id: Idedcb9f7cf9d849d3956bd030f283a081a06291c

--- a/dev.conf
+++ b/dev.conf
@@ -3,7 +3,7 @@ oasis={
     from = "Ozwillo <noreply+localdev@ozwillo.com>"
     server = "smtp://localhost:1025"
     starttls={
-      enabled=false
+      enable=false
     }
   }
 }
