Use tutum/mongodb Docker image instead of mongo
…as the mongo:2.6 no longer works with recent Linux Kernels
(exits with code 139)

Change-Id: Iea3c245bf4cf324e419904b8d758ce79f0b7efa3

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,11 +6,13 @@ volumes:
 
 services:
   mongo:
-    image: mongo:2.6
+    image: tutum/mongodb:2.6
     ports:
       - "27017:27017"
     volumes:
       - mongo_data:/data/db
+    environment:
+      - AUTH=no
     network_mode: "bridge"
 
   elasticsearch:
