Fix oasis-webapp:processResources task's staleness check
Properly declare the snippet_head_for_favicons.html as an
input file.

Change-Id: Ie709a30a3ed211c813e0e982d2420bd8a8c4bfc0

--- a/oasis-webapp/webapp.gradle
+++ b/oasis-webapp/webapp.gradle
@@ -44,6 +44,9 @@ dependencies {
 }
 
 processResources {
+  inputs.file("src/main/ozwillo-style/favicons/snippet_head_for_favicons.html")
+      .withPathSensitivity(PathSensitivity.NONE)
+
   from("src/main/ozwillo-style/favicons") {
     exclude("**/*.html")
     rename { file -> "oasis-ui/" + file }
