--- a/libraries.gradle
+++ b/libraries.gradle
@@ -25,23 +25,23 @@ subprojects {
   }
 }
 
-def guiceVersion = "4.2.0"
-def jacksonVersion = "2.9.5"
-def log4jVersion = "2.11.0"
-def resteasyVersion = "3.5.1.Final"
+def guiceVersion = "4.2.1"
+def jacksonVersion = "2.9.7"
+def log4jVersion = "2.11.1"
+def resteasyVersion = "3.6.1.Final"
 
 ext.libs = [
-  guava:               "com.google.guava:guava:25.0-jre",
+  guava:               "com.google.guava:guava:26.0-jre",
   jsr305:              "com.google.code.findbugs:jsr305:3.0.2",
 
-  immutables:          "org.immutables:value:2.5.6",
-  immutables_annotations: "org.immutables:value:2.5.6:annotations@jar",
+  immutables:          "org.immutables:value:2.7.1",
+  immutables_annotations: "org.immutables:value-annotations:2.7.1",
 
-  forbiddenapis:       "de.thetaphi:forbiddenapis:2.5",
+  forbiddenapis:       "de.thetaphi:forbiddenapis:2.6",
 
-  bouncycastle:        "org.bouncycastle:bcprov-jdk15on:1.59",
+  bouncycastle:        "org.bouncycastle:bcprov-jdk15on:1.60",
 
-  jose4j:              "org.bitbucket.b_c:jose4j:0.6.3",
+  jose4j:              "org.bitbucket.b_c:jose4j:0.6.4",
 
   guice:               [
       "com.google.inject:guice:$guiceVersion",
@@ -50,8 +50,8 @@ ext.libs = [
 
   jongo:               [
       "org.jongo:jongo:1.4.0",
-      "de.undercouch:bson4jackson:2.9.0",
-      "org.mongodb:mongo-java-driver:3.7.0",
+      "de.undercouch:bson4jackson:2.9.2",
+      "org.mongodb:mongo-java-driver:3.8.2",
     ],
 
   elasticsearch:       [
@@ -67,8 +67,8 @@ ext.libs = [
   resteasy_client:     [
       "org.jboss.resteasy:resteasy-client:$resteasyVersion",
       "net.ltgt.jaxrs:resteasy-client-okhttp3:1.1",
-      "com.squareup.okhttp3:okhttp:3.10.0",
-      "com.squareup.okhttp3:logging-interceptor:3.10.0"
+      "com.squareup.okhttp3:okhttp:3.11.0",
+      "com.squareup.okhttp3:logging-interceptor:3.11.0"
     ],
 
   resteasy_testing:   "net.ltgt.jaxrs:resteasy-testing:0.2",
@@ -101,7 +101,7 @@ ext.libs = [
 
   jsSHA:               "org.webjars.bower:jsSHA:2.3.1",
 
-  icu4j:               "com.ibm.icu:icu4j:61.1",
+  icu4j:               "com.ibm.icu:icu4j:62.1",
 
   galimatias:          "io.mola.galimatias:galimatias:0.2.1",
 
@@ -122,7 +122,7 @@ ext.libs = [
 
   junit:               "junit:junit:4.12",
 
-  mockito:             "org.mockito:mockito-core:2.18.3",
+  mockito:             "org.mockito:mockito-core:2.22.0",
 
   jukito:              [
       "org.jukito:jukito:1.5",
@@ -130,7 +130,7 @@ ext.libs = [
     ],
 
   assertj:             [
-      "org.assertj:assertj-core:3.9.1",
+      "org.assertj:assertj-core:3.11.1",
       "org.assertj:assertj-guava:3.2.0",
     ],
 ]
