--- a/libraries.gradle
+++ b/libraries.gradle
@@ -6,8 +6,12 @@ subprojects {
     resolutionStrategy {
       // AGPL-compatible alternatives (mostly Apache v2)
       def replacements = [
-        "org.jboss.spec.javax.annotation:jboss-annotations-api_1.1_spec": "org.apache.geronimo.specs:geronimo-annotation_1.1_spec:1.0.1",
+        "javax.annotation:jsr250-api": "org.apache.geronimo.specs:geronimo-annotation_1.2_spec:1.0",
+        "org.jboss.spec.javax.annotation:jboss-annotations-api_1.2_spec": "org.apache.geronimo.specs:geronimo-annotation_1.2_spec:1.0",
+        "org.jboss.spec.javax.ws.rs:jboss-jaxrs-api_2.1_spec": "org.apache.geronimo.specs:geronimo-jaxrs_2.1_spec:1.1",
+        "org.jboss.spec.javax.xml.bind:jboss-jaxb-api_2.3_spec": "org.apache.geronimo.specs:geronimo-jaxb_2.2_spec:1.0.1",
         "javax.activation:activation": "org.apache.geronimo.specs:geronimo-activation_1.1_spec:1.1",
+        "javax.json.bind:javax.json.bind-api": "org.apache.geronimo.specs:geronimo-jsonb_1.0_spec:1.1",
         // Use an Apache-licensed clean-room reimplementation of JCIP Annotations.
         // The original JCIP Annotations are under Creative Commons Attribution License
         // which is not recommended for software, and incompatible with AGPL.
