--- a/oasis-webapp/src/main/resources/elasticsearch/CatalogEntryIndexSettings.json
+++ b/oasis-webapp/src/main/resources/elasticsearch/CatalogEntryIndexSettings.json
@@ -32,6 +32,10 @@
         "instance_id": {
           "type": "string",
           "index": "not_analyzed"
+        },
+        "portals": {
+          "type": "string",
+          "index": "not_analyzed"
         }
       },
       "dynamic_templates": [
