Create Urls according to brand
We don't inject Urls anymore, but we create it each time we need it
with the UrlsFactory according to the brandId pass in the url or body
request.

UrlsFactory give the Urls following the portalBaseUri (fetch from db or
we take the configured portal-base-uri urls) and build myOasis related urls with
the PathUrls object which is configure in the reference.conf files.

Change-Id: I74c03c42495c44e38ea293a11b92cc8885cff6a9

--- a/oasis-webapp/src/main/resources/reference.conf
+++ b/oasis-webapp/src/main/resources/reference.conf
@@ -37,5 +37,13 @@ oasis={
       enable=true
     }
   }
-  urls = {}
+  urls = {
+    path = {
+      my-oasis="my"
+      my-profile="my/profile"
+      popup-profile="popup/profile"
+      my-apps="my/organization"
+      my-network="my/organization"
+    }
+  }
 }
