Add oasis.urls.developer-doc to reference.conf
Change-Id: Ie219a8efd45b0b58bcdc5edaef42b6c3dc67020f

--- a/oasis-webapp/src/main/resources/reference.conf
+++ b/oasis-webapp/src/main/resources/reference.conf
@@ -38,6 +38,7 @@ oasis={
     }
   }
   urls = {
+    developer-doc="https://doc.ozwillo.com/"
     path = {
       my-oasis="my"
       my-profile="my/profile"
